# cpp-cmake-base-project

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  clean.sh  pre_run.sh  rebuild.sh  run.sh  setup_directories_shared_thirdparty.sh
project_template_copy_here/: CMakeLists.txt
project_template_copy_here/scripts/: build.sh  clean.sh  post_run.sh  pre_run.sh  rebuild.sh  run.sh
